hphp/test/slow/collection_classes/frozen_set/immutability3.php.expectf
HipHop Fatal error: Call to undefined method HH\FrozenSet::addAll from anonymous context in %s/slow/collection_classes/frozen_set/immutability3.php on line 7
